@@ -1,13 +1,20 @@
+from __future__ import absolute_import, unicode_literals
+from six import iteritems, string_types
 from . import config
-from elasticsearch import Elasticsearch, client, helpers
-from .es_types import *
+from elasticsearch import client, helpers
+from elasticsearch.exceptions import RequestError
 from .base import VWBase
 from .util import all_subclasses
 from .connection import VWConnection
 import inspect
+from .es_types import ESType
 
 
 class MapperError(Exception):
+    pass
+
+
+class MapperMergeError(MapperError):
     pass
 
 
@@ -20,20 +27,21 @@ class Mapper(object):
         return client.IndicesClient(connection)
 
     # Retrieves the mapping as defined by the server
-    def get_server_mapping(self, connection=None, **kwargs):
+    def get_server_mapping(self, index=None, connection=None):
         es_client = self.get_es_client(connection)
         indexes = []
-        if isinstance(kwargs.get('index'), list):
-            indexes = kwargs.get('index')
-        elif kwargs.get('index'):
-            indexes.append(kwargs.get('index'))
-
-        # if the model arguent is a VWBase object
-        if isinstance(kwargs.get('index'), VWBase):
+        if isinstance(index, list):
+            indexes = index
+        # if the model argument is a VWBase object
+        elif isinstance(index, VWBase):
             try:
-                indexes.append(kwargs.get('index').__index__)
+                indexes.append(index.__index__)
             except AttributeError:
                 pass
+        elif isinstance(index, string_types):
+            indexes.append(index)
+        elif index:
+            raise TypeError('"index" argument must be a string or a list')
 
         if not indexes:
             indexes.append(config.default_index)
@@ -41,7 +49,7 @@ class Mapper(object):
         return es_client.get_mapping(index=indexes)
 
     # Retrieves what the map should be according to the defined models
-    def get_index_map(self, **kwargs):
+    def get_index_map(self, index=None):
         # recursively find all the subclasses of base
 
         # options
@@ -60,12 +68,12 @@ class Mapper(object):
         indexes = {}
 
         index_list = []
-        if kwargs.get('index'):
-            if isinstance(kwargs.get('index'), str):
-                index_list.append(kwargs.get('index'))
+        if index:
+            if isinstance(index, string_types):
+                index_list.append(index)
 
-            elif isinstance(kwargs.get('index'), list):
-                index_list.extend(kwargs.get('index'))
+            elif isinstance(index, list):
+                index_list.extend(index)
             else:
                 raise TypeError('"index" argument must be a string or list')
 
@@ -92,10 +100,17 @@ class Mapper(object):
 
             for k, v in inspect.getmembers(sc):
                 try:
-                    if v.__metaclass__ == ESType:
+                    if isinstance(v, ESType):
                         sc_body[sc.__type__]['properties'][k] = v.prop_dict()
                 except AttributeError:
                     pass
+
+            # overwrite with custom-mapping if applicable
+            try:
+                for k, v in iteritems(sc.__custom_mapping__):
+                    sc_body[sc.__type__][k].update(v)
+            except AttributeError:
+                pass
 
             indexes[idx]['mappings'].update(sc_body)
 
@@ -107,7 +122,7 @@ class Mapper(object):
         suffix = kwargs.get('suffix')
         indexes = self.get_index_map(**kwargs)
 
-        for k, v in indexes.iteritems():
+        for k, v in iteritems(indexes):
             if suffix:
                 idx = k + suffix
             else:
@@ -123,7 +138,7 @@ class Mapper(object):
 
         aliasd = es_client.get_aliases(index=alias)
         index = ''
-        for k, v in aliasd.iteritems():
+        for k, v in iteritems(aliasd):
             index = k
             break
 
@@ -136,7 +151,7 @@ class Mapper(object):
         es_client = self.get_es_client(connection)
 
         # are we an alias or an actual index?
-        index = idx;
+        index = idx
         alias = None
         alias_exists = False
 
@@ -176,14 +191,16 @@ class Mapper(object):
 
             es_client.put_alias(name=alias, index=newindex)
 
-    def get_subclasses(self, cls, subs):
+    @staticmethod
+    def get_subclasses(cls, subs):
         subs.extend(all_subclasses(cls))
 
-    def describe(self, cls):
+    @classmethod
+    def describe(cls, model):
         body = {}
-        for k, v in cls.__dict__.iteritems():
+        for k, v in iteritems(model.__dict__):
             try:
-                if v.__metaclass__ == ESType:
+                if isinstance(v, ESType):
                     body[k] = v.prop_dict()
             except AttributeError:
                 pass
@@ -192,3 +209,18 @@ class Mapper(object):
                 body[k] = {"type": type(v).__name__}
 
         return body
+
+    def update_type_mapping(self, doc_type, alias, connection=None):
+        local_map = self.get_index_map(alias)
+        es_client = self.get_es_client(connection)
+
+        if doc_type not in local_map:
+            raise MapperError('Type does not exist in this index/alias!')
+
+        try:
+            es_client.put_mapping(doc_type, {doc_type: local_map.get(doc_type)}, index=alias)
+        except RequestError as e:
+            if 'MergeMappingException' in e.error:
+                raise MapperMergeError
+            else:
+                raise MapperError('Mapper Error: Elasticsearch responded {}'.format(e.error))
